# steamworks-js

./: .gitignore  .gitmodules  .windsurfrules  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  build.yml  docs.yml  release.yml
.specstory/: .project.json
.specstory/history/: 2025-04-28_06-47-ci-workflow-for-typedoc-deployment.md
app/: package-lock.json  package.json  test-package.ts
app/src/: main.ts
examples/: download.ts  friends_info.ts  invalid_workshop_item.ts  package.ts  query_user.ts  sub.ts  tsconfig.json  unsub.ts  user_info.ts  workshop_item_details.ts
examples/workshop/: download.ts  invalid_workshop_item.ts  workshop_item_details.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: callback_util.rs  errors.rs  friends.rs  lib.rs
src/ugc/: get_item.rs  mod.rs  query.rs  query_item.rs  query_user.rs  subscribe_item.rs  subscribe_to_item.rs  types.rs  unsubscribe_item.rs  unsubscribe_to_item.rs
tmp/steamworks-ts/: Cargo.toml  package.json
tmp/steamworks-ts/.github/workflows/: CI.yml
tmp/steamworks-ts/npm/darwin-x64/: README.md  package.json
