[package]
edition = "2021"
name = "ldlework_steamworkts"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["async", "napi4", "tokio_rt"] }
napi-derive = "2.12.2"
steamworks = { path = "./swrs" }
steamworks-sys = { path = "./swrs/steamworks-sys" }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
futures = "0.3.31"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
